--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,8 +8,15 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     </head>
-
+    <link rel="stylesheet" href="/css/navigations_bar.css" />
     <body>
+    <div class="topnav">
+      <a class="active" href="/">Home</a>
+      
+      <a href="#about">About</a>
+    </div>
+    <br>
+    
         {{{body}}}
       
     </body>
