--- a/public/css/weight.css
+++ b/public/css/weight.css
@@ -1,3 +1,136 @@
-.new{
-    background-color: aliceblue;
+body{
+    background-color: #0c0c3f ;
+    margin: 0;
+    font-family:  sans-serif;
+}
+
+.div_map{
+    border: 4px solid rgb(212, 206, 224); 
+    border-radius: 20px;
+    padding: 0.5% 0.5% 0.5% 0.5%;
+    box-shadow: 5px 5px 5px 6px rgba(0, 0, 0, 0.37);
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+    
+}
+/*
+
+*/
+.parent{
+    padding-left: 2%;
+    
+}
+@media screen and (min-width: 1500px){
+    .parent{
+        display: grid;
+      grid-template-columns:  0.8fr 1fr
+    }
+
+
+}
+.map {
+    height: 400px;
+    width: 500px;
+    margin-left: 5%;
+    padding-right: 2%;
+    
+}
+
+.devices{
+    background-color:rgb(54, 21, 145);
+    max-width: fit-content;
+    padding: 2% 2% 2% 2%;
+    border: 2px solid rgb(212, 206, 224); 
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px 6px rgba(0, 0, 0, 0.37);
+    margin-bottom: 1rem;
+    height: fit-content;
+}
+
+li{
+    overflow:hidden;
+}
+
+
+
+.td_device:link, .td_device:visited {
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  }
+
+.td_device:hover, .td_device:active {
+    background-color: #3c7ad8;
+    cursor:pointer;
+  }
+
+
+.a1{
+    text-decoration:none;
+    color: black;
+    width: fit-content;
+}
+.a1:hover{
+    text-decoration:none;
+    color: black;
+}
+.test{
+        background-color:aliceblue;
+        width: max-content;
+        
+    }
+.test:link, .test:visited {
+        color: black;
+        text-align: center;
+        
+      }
+
+.test:hover, .test:active {
+    background-color: #15b9ac;
+      }
+
+.weight_button:hover ,.weight_button:active{
+    background-color: #3c7ad8;
+
+}
+    
+p{
+    display:inline-block;
+    }
+.ol-popup{
+    border-style:solid;
+    border-width: 0.02cm;
+    border-radius: 5%;
+    padding-right: auto;
+    background-color: rgb(167, 165, 165);
+    
+}
+#close_img{
+        float: right;
+        width: 15px;
+        height: auto;
+
+}
+
+.weight_button{
+    width: 100%;
+    background-color:aliceblue;
+    display:inline-block;
+   
+}
+
+td{
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    
+    text-align: center;
+    background-color:aliceblue;
+    border: 1px solid black;
+}
+
+td >.a1{
+    width: 10px;
+    
 }
