--- a/public/css/weight.css
+++ b/public/css/weight.css
@@ -5,6 +5,8 @@ body{
 }
 
 .div_map{
+    width: 500px;
+     height: 300px; 
     border: 4px solid rgb(212, 206, 224); 
     border-radius: 20px;
     padding: 0.5% 0.5% 0.5% 0.5%;
@@ -20,7 +22,21 @@ body{
     padding-left: 2%;
     
 }
-@media screen and (min-width: 1300px){
+@media screen and (min-width: 900px){
+    .div_map{
+        width: 900px;
+         height: 600px; 
+        border: 4px solid rgb(212, 206, 224); 
+        border-radius: 20px;
+        padding: 0.5% 0.5% 0.5% 0.5%;
+        box-shadow: 5px 5px 5px 6px rgba(0, 0, 0, 0.37);
+        margin-bottom: 1rem;
+        margin-right: 1rem;
+        
+    }
+}
+@media screen and (min-width: 1500px){
+    
     .parent{
         display: grid;
       grid-template-columns:  0.8fr 1fr
