--- a/views/devices.hbs
+++ b/views/devices.hbs
@@ -88,7 +88,7 @@
   var weights=[]
   var dates=[]
   var times=[]
-  var xValues=[]
+  //var xValues=[]
   var da1=[]
   var yValues=[]
   for(var i=0;i<date.length;i++){
