--- a/views/devices.hbs
+++ b/views/devices.hbs
@@ -88,7 +88,7 @@ function find_min(array){
 
       }
       else{
-        if(array[i]<max1){
+        if(array[i]<min1){
           min1=array[i]
         }
       }
