--- a/views/devices.hbs
+++ b/views/devices.hbs
@@ -118,6 +118,7 @@ function find_min(array){
   //var xValues=[]
   var da1=[]
   var yValues=[]
+  var xValues=[]
   for(var i=0;i<date.length;i++){
     var a=date[i].innerText;
     console.log(a)
