--- a/views/home_page.hbs
+++ b/views/home_page.hbs
@@ -54,6 +54,7 @@
       <td>Latitude </td>
       <td>Date-Time</td>
       <td>State of device</td>
+      <td>Mode</td>
       <td>Sample rate</td>
     </tr>
     {{#each devices }}
@@ -70,6 +71,7 @@
          <td><p class="latitude" >{{lang}} </p></td>
         <td class="date-time"> <p class="date" >{{date_time}}</p>&nbsp;<p class="time"> {{time}}</p></td>
         <td><p>{{is_on}}</p></td>
+        <td><p class="mode">{{mode}}</p></td>
         <td><p class=sample_rate>{{sample_rate}}</p></td>
         <td class="test"><a href="/device/{{device_id1}}"target="_self" class="a1" ><p>See history</p></a></td>
        <!--  </div> -->
@@ -79,17 +81,19 @@
     {{/each}}
 </table>
 
-</div>
-<!--<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
-<form action="/change_device_settings" method="post" target="dummyframe" >
+</div><!--
+<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
+<form action="/handle" method="post" target="dummyframe" </form>>
     <labe for="change state"  id="device_id">scale_0 is on</p><br>
     <label for="change_state">Turn off Device</label>
-    <input type="checkbox" id="change_state" name="change_state" value="1"> <br>
+    <div class="normal_mode">
+    <input type="checkbox" id="change_state" onlick="test()"name="change_state" value="1"> <br>
     
     <input   type="text" name="device_id" value="0" style="display: none;" readonly>
     <input id="rangeInput" name="sample_rate" type="range" min="1" max="30" value="30" oninput="amount.value=rangeInput.value" />
     <input id="amount" type="number" value="30" min="1" max="30" oninput="rangeInput.value=amount.value" /><br>
     <input type="submit" value="Save Changes">
+    </div>
     </form>-->
 
 
@@ -99,10 +103,7 @@
 
 <script >
 
-  function change_state(){
-    console.log('hello there')
-    
-  }
+ 
 
   function get_basic_info(){
  var list=document.getElementsByClassName('task')
@@ -211,6 +212,7 @@
     var da=document.getElementsByClassName('date')
     var ti=document.getElementsByClassName('time')
     var sam=document.getElementsByClassName('sample_rate')
+    var mode=document.getElementsByClassName('mode')
     var locations=[]
     var latitude=[]
     var lognitude=[]
@@ -223,6 +225,15 @@
     var state=[]
     var change_state1=[]
     var sample_rate=[]
+    var reqular=[]
+    var press=[]
+    var psm=[]
+    var min_st=[]
+    var max_st=[]
+    var monada=[]
+    var div_options=[]
+    var div_display=[]
+    var turn_device=[]
     for(i=0;i<la.length;i++){
       position.push( pos[i].id)
       names.push(list[i].innerText)
@@ -236,13 +247,42 @@
         sample_rate.push(sam[i].innerText)
         if(we[i].id=='0'){
           state.push('off')
+          turn_device.push('1')
+            div_options.push(' style="display: none;"')
           change_state1.push('on')
         }
         if(we[i].id=='1'){
           state.push('on')
+          turn_device.push('0')
+            div_options.push('')
           change_state1.push('off')
         }
-       
+             
+       if(mode[i].innerText=='reqular'){
+         monada.push('seconds')
+         min_st.push('30')
+         max_st.push('100')
+         div_display.push('')
+         reqular.push('checked=true')
+         press.push('')
+         psm.push('')
+       }
+  
+      if(mode[i].innerText=='psm'){
+           monada.push('hours')
+            min_st.push('1')
+         max_st.push('6')
+            div_display.push('')
+         reqular.push('')
+         press.push('')
+         psm.push('checked=true')
+       }
+      if(mode[i].innerText=='press_mode'){
+         div_display.push(' style="display: none;"')
+         reqular.push('')
+         press.push('checked=true')
+         psm.push('')
+       }
     }
 
     console.log(latitude)
@@ -271,7 +311,17 @@
           "time":time[i],
           "state":state[i],
           "change_state1":change_state1[i],
-          "sample_rate":sample_rate[i]
+          "sample_rate":sample_rate[i],
+          "reqular":reqular[i],
+          "press":press[i],
+          "psm":psm[i],
+          "min_st":min_st[i],
+          "max_st":max_st[i],
+          "div_display":div_display[i],
+          "monada":monada[i],
+          "div_option":div_options[i],
+          "turn_device":turn_device[i]
+
         })
     }
 var mark=[]
@@ -279,13 +329,67 @@ var mark1
 var id1
 console.log(position)
 var form1
+ function test(){
+    console.log('hello there')
+    var r1=document.getElementById('more_options')
+    r1.style.display='block'
+    var t=rangeInput
+    var t1=amount
+    var r=document.getElementById('sample_rate_label')
+    r.innerText=''
+    r.innerText='Choose sample rate(hours)'
+    
+    t.min='1'
+    t1.min='1'
+    t.value='1'
+    t1.value='1'
+    t.max='6'
+    t1.max='6'
+}
+ function test1(){
+    console.log('hello there')
+    var r1=document.getElementById('more_options')
+    r1.style.display='block'
+    var r=document.getElementById('sample_rate_label')
+    r.innerText=''
+    r.innerText='Choose sample rate(seconds)'
+    var t=rangeInput
+    var t1=amount
+    
+    t.min='30'
+    t1.min='30'
+    t.value='30'
+    t1.value='30'
+    t.max='60'
+    t1.max='60'
+}
+ function test2(){
+    console.log('hello there')
+    var r1=document.getElementById('more_options')
+    r1.style.display='none'
+  
+}
+function change_options(){
+  var r1=change_state
+  var t1=document.getElementById('all_options')
+  console.log(r1.checked)
+  if(t1.style.display=='none'){
+    t1.style.display='block'
+  }
+  else{
+    t1.style.display='none'
+  }
+}
+      
+      //.bindPopup( '<a href="/device/' + markers[i].id + '" target="_self" rel="noopener" class="a2">device:' + markers[i].name + '</a><br>'+'<p> weight: '+markers[i].weight+' kg<br>'+markers[i].date+' '+markers[i].time+'</p>' +'<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe><form action="/handle" method="post"><label for="change state"  id="device_id">'+markers[i].name+'is '+markers[i].state +'</p><br><label for="change_state">Turn '+markers[i].change_state1+ ' Device</label>'+'<input type="checkbox" id="change_state" name="change_state" value="1"><br> <label for=press_mode>press mode</label><input  type="radio" id=psm onclick="test2()" name="mode" value="press_mode" checked='+markers[i].press+'><br><label for=psm>power save mode</label><input  type="radio" id=psm onclick="test()" name="mode" value="psm" checked='+markers[i].psm+'><br><label for=reqular'+markers[i].id+'>reqular mode</label><input  type="radio" id=reqular'+markers[i].id+' onclick="test1()" name="mode" value="reqular" checked='+markers[i].reqular+' ><br><div id='+'more_options'+'><input   type="text" name="device_id" value='+markers[i].id+' style="display: none;" readonly><label for="sample_rate" display="style:'+markers[i].div_display+'"id='+'sample_rate_label'+'>Choose sample rate('+markes[i].monada+')</label><br><input id="rangeInput" name="sample_rate" type="range" min='+markes[i].min_st+' max='+markers[i].max_st+' value='+markers[i].sample_rate+' oninput="amount.value=rangeInput.value" /><input id="amount" type="number" value='+ markers[i].sample_rate+'min='+markes[i].min_st+' max='+markers[i].max_st+' oninput="rangeInput.value=amount.value" /><br></div><input type="submit" value="Save Changes"></form>')
+
 
 for ( var i=0; i < markers.length; ++i ) 
 {
  //frame1=+ 'Device</label><input type="checkbox" id="change_state" name="change_state" value="1"> <br><input   type="text" name="device_id" value='markers[i].id+' style="display: none;" readonly><input id="rangeInput" name="sample_rate" type="range" min="1" max="30" value='+markers[i].sample_rate+' oninput="amount.value=rangeInput.value" /><input id="amount" type="number"'+ value=markers[i].sample_rate+' min="1" max="30" oninput="rangeInput.value=amount.value" /><br><input type="submit" value="Save Changes"></form>'
    
   mark1= L.marker( [markers[i].lat, markers[i].lng] )
-      .bindPopup( '<a href="/device/' + markers[i].id + '" target="_self" rel="noopener" class="a2">device:' + markers[i].name + '</a><br>'+'<p> weight: '+markers[i].weight+' kg<br>'+markers[i].date+' '+markers[i].time+'</p>' +'<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe><form action="/change_device_settings" method="post"><label for="change state"  id="device_id">'+markers[i].name+'is '+markers[i].state +'</p><br><label for="change_state">Turn '+markers[i].change_state1+ ' Device</label>'+'<input type="checkbox" id="change_state" name="change_state" value="1"> <br><input   type="text" name="device_id" value='+markers[i].id+' style="display: none;" readonly><input id="rangeInput" name="sample_rate" type="range" min="30" max="100" value='+markers[i].sample_rate+' oninput="amount.value=rangeInput.value" /><input id="amount" type="number" value='+ markers[i].sample_rate+' min="30"  max="100" oninput="rangeInput.value=amount.value" /><br><input type="submit" value="Save Changes"></form>')
+      .bindPopup( '<a href="/device/' + markers[i].id + '" target="_self" rel="noopener" class="a2">device:' + markers[i].name + '</a><br>'+'<p> weight: '+markers[i].weight+' kg<br>'+markers[i].date+' '+markers[i].time+'</p>' +'<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe><form action="/change_device_settings" method="post"><label for="change state"  id="device_id">'+markers[i].name+'is '+markers[i].state +'</p><br><label for="change_state">Turn '+markers[i].change_state1+ ' Device</label>'+'<input type="checkbox" id="change_state" name="change_state" onclick="change_options()" value='+markers[i].turn_device+'><br><div id='+'all_options '+markers[i].div_option+'> <label for=press_mode>press mode</label><input  type="radio" id=psm onclick="test2()" name="mode" value="press_mode" '+markers[i].press+'><br><label for=psm>power save mode</label><input  type="radio" id=psm onclick="test()" name="mode" value="psm" '+markers[i].psm+'><br><label for=reqular'+markers[i].id+'>reqular mode</label><input  type="radio" id=reqular'+markers[i].id+' onclick="test1()" name="mode" value="reqular" '+markers[i].reqular+' ><br><div id='+'more_options'+''+markers[i].div_display+'><input   type="text" name="device_id" value='+markers[i].id+' style="display: none;" readonly><label for="sample_rate" id='+'sample_rate_label'+'>Choose sample rate('+markers[i].monada+')</label><br><input id="rangeInput" name="sample_rate" type="range" min='+markers[i].min_st+' max='+markers[i].max_st+' value='+markers[i].sample_rate+' oninput="amount.value=rangeInput.value" /><input id="amount" type="number" value='+ markers[i].sample_rate+' min='+markers[i].min_st+' max='+markers[i].max_st+' oninput="rangeInput.value=amount.value" /><br></div></div><input type="submit" value="Save Changes"></form>')
       .addTo( map );
   mark.push(
     { 
