--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,6 +14,13 @@
       <a class="active" href="/">Home</a>
       
       <a href="#about">About</a>
+      {{#if username}}
+        <a>{{username}}</a>
+        <a href="/logout">logout</a>
+         {{else}}
+      <a href="/login">Login</a>
+      <a href="/register">Register</a>
+       {{/if}}
     </div>
     <br>
     
