--- a/views/home_page.hbs
+++ b/views/home_page.hbs
@@ -225,7 +225,7 @@ function check_refresh(max_pos,ms){
     
     //var da=new Date(a.substring(0,a.length-1));
     var da=new Date(a);
-    date1[i].innerText=da.toLocaleString()
+    //date1[i].innerText=da.toLocaleString()
 
 
 
