--- a/public/css/device.css
+++ b/public/css/device.css
@@ -26,7 +26,7 @@ body{
     padding-left: 2%;
     
 }
-/*
+
 @media screen and (min-width: 1500px){
     .parent{
         display: grid;
@@ -34,7 +34,7 @@ body{
     }
 
 
-}*/
+}
 .map {
     height:200px;
     width: 500px;
