--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -9,6 +10,9 @@
             integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     </head>
     <link rel="stylesheet" href="/css/navigations_bar.css" />
+      <link rel = "icon" href = 
+"https://scontent.fath7-1.fna.fbcdn.net/v/t1.15752-9/273558048_342079107813330_1042667849827143624_n.png?_nc_cat=110&ccb=1-5&_nc_sid=ae9488&_nc_ohc=XRYV49XZ2e8AX_mSxIR&_nc_ht=scontent.fath7-1.fna&oh=03_AVLuZ9Mz6HqdS3xivARt5xnfMXbUT3ZLPtnFPkP3H_laJA&oe=62291B2E" 
+        type = "image/x-icon">
     <body>
     <div class="topnav">
       <a class="active" href="/">Home</a>
